<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutData"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:isScrollContainer="false"
    android:orientation="vertical" >

    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingBottom="16dp"
				android:paddingTop="16dp"
				android:text="@string/fb_title"
				style="@android:style/TextAppearance.Medium" />
            <LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="16dp"
				android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
	                android:layout_height="1dp"
	                android:layout_weight="1" />        
	            <Button
	                android:id="@+id/fb_bad"
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"          
			        android:drawableTop="@drawable/ic_action_bad" 
			        android:text="@string/fb_bad"
			        android:textSize="12sp"
			        android:textAppearance="?android:attr/textAppearanceButton"
			        android:background="@drawable/btn_background"
			        style="?android:attr/borderlessButtonStyle">
	            </Button>
	            <View
	                android:layout_width="0dp"
	                android:layout_height="1dp"
	                android:layout_weight="1" />        
	            <Button
	                android:id="@+id/fb_good"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"          
	                android:drawableTop="@drawable/ic_action_good"        
	                android:text="@string/fb_good"
	                android:textSize="12sp"
	                android:textAppearance="?android:attr/textAppearanceButton"
	                android:background="@drawable/btn_background"
	                style="?android:attr/borderlessButtonStyle">
	            </Button>       
	            <View
	                android:layout_width="0dp"
	                android:layout_height="1dp"
	                android:layout_weight="1" />  
	            <Button
	                android:id="@+id/fb_info"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"          
	                android:drawableTop="@drawable/ic_action_about"        
	                android:text="@string/fb_info"
	                android:textSize="12sp"
	                android:textAppearance="?android:attr/textAppearanceButton"
	                android:background="@drawable/btn_background"
	                style="?android:attr/borderlessButtonStyle">
	            </Button>             
                <View
	                android:layout_width="0dp"
	                android:layout_height="1dp"
                    android:layout_weight="1" />        
                </LinearLayout>
                <CheckBox
                    android:id="@+id/fb_cb_anon"
			        android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
                    android:text="@string/fb_cb_anon" 
                    style="@android:style/TextAppearance.Small" />
                <EditText
			        android:id="@+id/fb_email"         
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
			        android:ems="6"
			        android:inputType="textEmailAddress"
			        android:hint="@string/fb_email">
			    </EditText>
			    <CheckBox
			        android:id="@+id/fb_cb_stat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
			        android:text="@string/fb_cb_stat"
			        android:checked="true"
			        style="@android:style/TextAppearance.Small" />
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
        		    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/fb_content"
                    style="@android:style/TextAppearance.Small"/>
            <LinearLayout
                android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
			    <EditText
			        android:id="@+id/fb_input"         
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="textMultiLine" 
			        android:gravity="top"
			        android:layout_weight="5">
			    </EditText>
			    <ImageButton
			        android:id="@+id/fb_attach"
                    android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:contentDescription="@string/fb_attach"
			        android:src="@drawable/ic_action_new_attachment" 
			        style="?android:attr/borderlessButtonStyle" />
			 </LinearLayout>			           
        </LinearLayout>
    </ScrollView>	
    <ListView
        android:id="@+id/attach_listView"
        android:isScrollContainer="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >
    </ListView>  
    <TextView
        android:id="@+id/attach_empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fb_attach_none" >
    </TextView>
</LinearLayout>	
