<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" 
    android:background="?android:attr/activatedBackgroundIndicator">
    <!--     android:background="@color/result_view" -->

    <TextView
        android:id="@+id/cert_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:text="@string/cert_title"
        android:textColor="@color/result_text"
        android:textSize="28sp" />
    
     <LinearLayout
         android:id="@+id/cert_date_exp_row"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/cert_title"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/cert_label_date_exp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:layout_gravity="start"
             android:singleLine="true"
             android:text="@string/cert_label_date_expire"
             android:textColor="@color/result_text"
             android:textSize="18sp" />
         
         <TextView
             android:id="@+id/cert_date_expire"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:layout_gravity="end" 
             android:singleLine="true"
             android:text="@string/cert_date_default"
             android:textColor="@color/result_text"
             android:textSize="18sp" />
     </LinearLayout>
    
</RelativeLayout> 